amended css to fix + button spacing - now sits below everything else

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,7 +76,7 @@ h4{
   flex-direction: column;
   align-items: center;
   width: 100%;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0px;
 }
 
